Criação da entidade stack para que o banco a leia como vetor

--- a/pessoaapi/src/main/resources/application.properties
+++ b/pessoaapi/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=pessoaapi
+spring.datasource.url=jdbc:h2:mem:sue_db
+spring.datasource.schema=classpath:data.sql
+spring.jpa.hibernate.dll-auto=update
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
